FEAT - Import movie data

--- a/src/main/webapp/app/entities/movie/movie-detail.component.html
+++ b/src/main/webapp/app/entities/movie/movie-detail.component.html
@@ -16,9 +16,9 @@
         <dd>
             <span>{{movie.plot}}</span>
         </dd>
-        <dt><span jhiTranslate="mediafuryApp.movie.imageUrl">Image Url</span></dt>
+        <dt><span jhiTranslate="mediafuryApp.movie.image">Image</span></dt>
         <dd>
-            <span>{{movie.imageUrl}}</span>
+            <span><img src="{{movie.imageUrl}}"></span>
         </dd>
         <dt><span jhiTranslate="mediafuryApp.movie.elo">Elo</span></dt>
         <dd>
