FEAT - Move home to about page and create Fury page

--- a/src/main/webapp/app/entities/movie/movie-detail.component.html
+++ b/src/main/webapp/app/entities/movie/movie-detail.component.html
@@ -38,7 +38,8 @@
         <span class="fa fa-arrow-left"></span>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
     </button>
 
-    <button type="button"
+    <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+            type="button"
             [routerLink]="['/', { outlets: { popup: 'movie/'+ movie.id + '/edit'} }]"
             replaceUrl="true"
             queryParamsHandling="merge"
