--- a/src/main/webapp/app/entities/movie/movie.component.html
+++ b/src/main/webapp/app/entities/movie/movie.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>
+    <h2 *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <span jhiTranslate="mediafuryApp.movie.home.title">Movies</span>
         <button class="btn btn-primary float-right jh-create-entity create-movie" [routerLink]="['/', { outlets: { popup: ['movie-new'] } }]">
             <span class="fa fa-plus"></span>
@@ -41,7 +41,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'movie/'+ movie.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -49,7 +50,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'movie/'+ movie.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
