--- a/src/main/webapp/app/entities/category/category.component.html
+++ b/src/main/webapp/app/entities/category/category.component.html
@@ -1,5 +1,5 @@
 <div>
-    <h2>
+    <h2 *jhiHasAnyAuthority="'ROLE_ADMIN'">
         <span jhiTranslate="mediafuryApp.category.home.title">Categories</span>
         <button class="btn btn-primary float-right jh-create-entity create-category" [routerLink]="['/', { outlets: { popup: ['category-new'] } }]">
             <span class="fa fa-plus"></span>
@@ -33,7 +33,8 @@
                             <span class="fa fa-eye"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.view">View</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'category/'+ category.id + '/edit'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
@@ -41,7 +42,8 @@
                             <span class="fa fa-pencil"></span>
                             <span class="d-none d-md-inline" jhiTranslate="entity.action.edit">Edit</span>
                         </button>
-                        <button type="submit"
+                        <button *jhiHasAnyAuthority="'ROLE_ADMIN'"
+                                type="submit"
                                 [routerLink]="['/', { outlets: { popup: 'category/'+ category.id + '/delete'} }]"
                                 replaceUrl="true"
                                 queryParamsHandling="merge"
