--- a/src/main/webapp/app/entities/person/person-detail.component.html
+++ b/src/main/webapp/app/entities/person/person-detail.component.html
@@ -16,7 +16,8 @@
         <span class="fa fa-arrow-left"></span>&nbsp;<span jhiTranslate="entity.action.back"> Back</span>
     </button>
 
-    <button type="button"
+    <button  *jhiHasAnyAuthority="'ROLE_ADMIN'"
+             type="button"
             [routerLink]="['/', { outlets: { popup: 'person/'+ person.id + '/edit'} }]"
             replaceUrl="true"
             queryParamsHandling="merge"
