--- a/src/main/webapp/app/fury/fury.component.html
+++ b/src/main/webapp/app/fury/fury.component.html
@@ -1,9 +1,14 @@
-<div class="row">
-    <h1 class="display-4" jhiTranslate="fury.title">Rumble Time!</h1>
-    <h2 class="lead" jhiTranslate="fury.subtitle">Click on the one you like the most</h2>
-
-    <div class="row">
-        <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
-        <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
+<div [ngSwitch]="isAuthenticated()">
+    <div class="row" *ngSwitchCase="true">
+        <h1 class="col-md-12 text-center display-4" jhiTranslate="fury.title">Fury Time!</h1>
+        <h2 class="col-md-12 text-center lead" jhiTranslate="fury.subtitle">Click on the one you like the most</h2>
+        <div class="row">
+            <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
+            <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
+        </div>
+    </div>
+    <div class="row alert alert-warning" *ngSwitchCase="false">
+        <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
+        <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
     </div>
 </div>
