FEAT - Better fury page: plots, only movies with images in random

--- a/src/main/webapp/app/entities/movie/movie-detail.component.html
+++ b/src/main/webapp/app/entities/movie/movie-detail.component.html
@@ -18,7 +18,7 @@
         </dd>
         <dt><span jhiTranslate="mediafuryApp.movie.image">Image</span></dt>
         <dd>
-            <span><img src="{{movie.imageUrl}}"></span>
+            <jhi-movie-poster [movie]="movie"></jhi-movie-poster>
         </dd>
         <dt><span jhiTranslate="mediafuryApp.movie.elo">Elo</span></dt>
         <dd>
