--- a/src/main/webapp/app/fury/fury-contest/fury-contest.scss
+++ b/src/main/webapp/app/fury/fury-contest/fury-contest.scss
@@ -2,3 +2,7 @@
 /* ==========================================================================
 Fury page styles
 ========================================================================== */
+
+.cursor-pointer {
+    cursor: pointer;
+}
