--- a/src/main/webapp/app/fury/fury.component.html
+++ b/src/main/webapp/app/fury/fury.component.html
@@ -2,10 +2,7 @@
     <div class="row" *ngSwitchCase="true">
         <h1 class="col-md-12 text-center display-4" jhiTranslate="fury.title">Fury Time!</h1>
         <h2 class="col-md-12 text-center lead" jhiTranslate="fury.subtitle">Click on the one you like the most</h2>
-        <div class="row">
-            <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
-            <div class="col-md-6"><jhi-movie-random></jhi-movie-random></div>
-        </div>
+        <jhi-fury-contest></jhi-fury-contest>
     </div>
     <div class="row alert alert-warning" *ngSwitchCase="false">
         <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
