--- a/src/main/webapp/app/fury/fury-contest/fury-contest.component.html
+++ b/src/main/webapp/app/fury/fury-contest/fury-contest.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" *ngIf="!fetching">
     <div class="col-md-1"></div>
     <div class="col-md-4 cursor-pointer">
         <jhi-movie-random (movieChange)="leftMovie = $event" (onClick)="movieClicked($event)"></jhi-movie-random>
