--- a/src/main/webapp/app/entities/movie/movie-detail.component.html
+++ b/src/main/webapp/app/entities/movie/movie-detail.component.html
@@ -27,7 +27,13 @@
         <dt><span jhiTranslate="mediafuryApp.movie.category">Category</span></dt>
         <dd>
             <span *ngFor="let category of movie.categories; let last = last">
-                <a [routerLink]="['/category', category?.id ]">{{category.title}}</a>{{last ? '' : ', '}}
+                <a [routerLink]="['/category', category?.id ]">{{category.name}}</a>{{last ? '' : ', '}}
+            </span>
+        </dd>
+        <dt><span jhiTranslate="mediafuryApp.movie.moviePerson">Person</span></dt>
+        <dd>
+            <span *ngFor="let person of movie.persons; let last = last">
+                <a [routerLink]="['/person', category?.id ]">{{person.name}}</a>{{last ? '' : ', '}}
             </span>
         </dd>
     </dl>
