--- a/src/main/webapp/app/entities/movie/movie-dialog.component.html
+++ b/src/main/webapp/app/entities/movie/movie-dialog.component.html
@@ -81,7 +81,7 @@
         <div class="form-group">
             <label jhiTranslate="mediafuryApp.movie.category" for="field_category">Category</label>
             <select class="form-control" id="field_category" multiple name="category" [(ngModel)]="movie.categories">
-                <option [ngValue]="getSelected(movie.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.title}}</option>
+                <option [ngValue]="getSelected(movie.categories, categoryOption)" *ngFor="let categoryOption of categories; trackBy: trackCategoryById">{{categoryOption.name}}</option>
             </select>
         </div>
     </div>
