TECH - Filter by movie category

--- a/src/main/webapp/app/entities/category/category-detail.component.html
+++ b/src/main/webapp/app/entities/category/category-detail.component.html
@@ -1,6 +1,6 @@
 
 <div *ngIf="category">
-    <h2><span jhiTranslate="mediafuryApp.category.detail.title">Category</span> {{category.id}}</h2>
+    <h2><span jhiTranslate="mediafuryApp.category.detail.title">Category</span> {{category.name}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
