TECH - Translation and titles

--- a/src/main/webapp/app/about/about.component.html
+++ b/src/main/webapp/app/about/about.component.html
@@ -3,8 +3,10 @@
         <span class="hipster img-fluid rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4" jhiTranslate="about.title">Welcome, Java Hipster!</h1>
-        <p class="lead" jhiTranslate="about.subtitle">This is your homepage</p>
+        <h1 class="display-4" jhiTranslate="about.title">Welcome to media fury</h1>
+        <p class="lead" jhiTranslate="about.subtitle">This is a pet project to test angular 5+ and spring through jhipster generators. The theme of this project is based on the awesome short film named Kung Fury: </p>
+
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/bS5P_LAqiVg?rel=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
