FEAT - About info

--- a/src/main/webapp/app/about/about.component.html
+++ b/src/main/webapp/app/about/about.component.html
@@ -24,6 +24,17 @@
             </div>
         </div>
 
+
+        <p>
+            <span jhiTranslate="about.omdb">All data comes form OMDB and is subject to their license: </span><a href="http://omdbapi.com/">OMDB</a>
+        </p>
+
+        <p>
+            <span jhiTranslate="about.mediafury_source">Mediafury source code: </span><a href="https://github.com/prevostc/mediafury">https://github.com/prevostc/mediafury</a>
+        </p>
+
+
+
         <p jhiTranslate="about.question">
             If you have any question on JHipster:
         </p>
