--- a/src/main/webapp/app/fury/fury.component.html
+++ b/src/main/webapp/app/fury/fury.component.html
@@ -5,7 +5,10 @@
         <jhi-fury-contest></jhi-fury-contest>
     </div>
     <div class="row alert alert-warning" *ngSwitchCase="false">
-        <span jhiTranslate="global.messages.info.authenticated.prefix">If you want to </span>
-        <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a><span jhiTranslate="global.messages.info.authenticated.suffix">, you can try the default accounts:<br/>- Administrator (login="admin" and password="admin") <br/>- User (login="user" and password="user").</span>
+        <span jhiTranslate="global.messages.info.authenticated.prefix">You need to </span>&nbsp;
+        <a class="alert-link" (click)="login()" jhiTranslate="global.messages.info.authenticated.link">sign in</a>&nbsp;
+        <div jhiTranslate="global.messages.info.authenticated.suffix"> to access mediafury, you can try the default accounts:<br/>
+            - Administrator (login="admin" and password="admin") <br/>
+            - User (login="user" and password="user").</div>
     </div>
 </div>
