--- a/src/main/webapp/app/entities/movie/movie-poster/movie-poster.component.html
+++ b/src/main/webapp/app/entities/movie/movie-poster/movie-poster.component.html
@@ -1,1 +1,1 @@
-<img class="img-responsive center-block" height="{{height}}" src="{{getImageUrl()}}">
+<img alt="image poster" class="img-responsive center-block {{class}}" height="{{height}}" width="{{width}}" src="{{getImageUrl()}}">
