--- a/src/main/webapp/app/fury/fury-contest/fury-contest.component.html
+++ b/src/main/webapp/app/fury/fury-contest/fury-contest.component.html
@@ -1,11 +1,12 @@
-<div class="row" *ngIf="!fetching">
-    <div class="col-md-1"></div>
-    <div class="col-md-4 cursor-pointer">
-        <jhi-movie-random (movieChange)="leftMovie = $event" (onClick)="movieClicked($event)"></jhi-movie-random>
+
+
+<div *ngIf="!fetching">
+    <div class="row">
+        <div class="col-md-3 offset-md-2 cursor-pointer">
+            <jhi-movie-random (movieChange)="leftMovie = $event" (onClick)="movieClicked($event)"></jhi-movie-random>
+        </div>
+        <div class="col-md-3 offset-md-2 cursor-pointer">
+            <jhi-movie-random (movieChange)="rightMovie = $event" (onClick)="movieClicked($event)"></jhi-movie-random>
+        </div>
     </div>
-    <div class="col-md-2"></div>
-    <div class="col-md-4 cursor-pointer">
-        <jhi-movie-random (movieChange)="rightMovie = $event" (onClick)="movieClicked($event)"></jhi-movie-random>
-    </div>
-    <div class="col-md-1"></div>
 </div>
