--- a/src/main/webapp/app/fury/fury-contest/fury-contest.scss
+++ b/src/main/webapp/app/fury/fury-contest/fury-contest.scss
@@ -6,3 +6,11 @@ Fury page styles
 .cursor-pointer {
     cursor: pointer;
 }
+
+jhi-movie-random {
+    display: block;
+}
+
+.fury-contest {
+    min-height: 600px;
+}
